objects/AIA_Grouper__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnualMaximumApplies_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AnnualMaximumApplies Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualMaximumApplies__c</fullName>
        <label>INN Annual Maximum Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDPName__c</fullName>
        <description>The name of the Benefit Design Product.  This is only applicable to Groupers that have a Benefit Design Product lookup field populated.</description>
        <formula>IF(Benefit_Design_Product__c != NULL, Benefit_Design_Product__r.Name + ' - ' + Benefit_Design_Product__r.Product_Parent_Name__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF__c</fullName>
        <formula>IF(  Grouper_RecordtypeName__c='Proposed_Proposed', Proposed_Products__r.Benefit_Request_Form__r.Name, Benefit_Design_Product__r.Benefit_Design__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF/ BD #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Product</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>Grouper</relationshipLabel>
        <relationshipName>Grouper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Non_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Non-Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>AIA_Grouper__c</referenceTo>
        <relationshipLabel>Grouper</relationshipLabel>
        <relationshipName>Grouper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoInsurance_AddIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Additional Increment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance High</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Increment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_InvalidIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Invalid Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Low</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DavisString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Davis String</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeductibleApplies_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Deductible Applies Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeductibleApplies__c</fullName>
        <label>INN Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Share Group</fullName>
                </value>
                <value>
                    <fullName>Benefit Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grouper_Name_Edited__c</fullName>
        <formula>IF( ( ISPICKVAL( Benefit_Design_Product__r.Product_Category__c , 'Vision') ||  ISPICKVAL( Proposed_Products__r.Product_Category__c ,'Vision') ), MID( Name , 4,  LEN( Name )-3 )  , '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouper Name Edited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouper_Record_Type__c</fullName>
        <label>Grouper Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grouper_RecordtypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouper RecordtypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InNetwork Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCovered_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN IsCovered Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCovered__c</fullName>
        <label>INN IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network</label>
        <referenceTo>AIA_Network__c</referenceTo>
        <relationshipLabel>Grouper</relationshipLabel>
        <relationshipName>Grouper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OON_AnnualMaximumApplies_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Annual MaximumApplies Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_AnnualMaximumApplies__c</fullName>
        <label>OON Annual MaximumApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_AddIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance AddIncrement</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance High</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance Increment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_InvalidIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance InvalidIncrement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance Low</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CoInsurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON CoInsurance</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_DavisString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON DavisString</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_DeductibleApplies_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON DeductibleApplies Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_DeductibleApplies__c</fullName>
        <label>OON DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_IsCovered_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON IsCovered Default</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_IsCovered__c</fullName>
        <label>OON IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_OutNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ONN Network Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Grouper_Id__c</fullName>
        <description>Grouper Id coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Grouper Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPName__c</fullName>
        <description>The name of the Proposed Product this benefit belongs to.  Only applicable to groupers that have a valid Proposed Product lookup field value.</description>
        <formula>Proposed_Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The product category</description>
        <formula>Text(Benefit_Design_Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product category</inlineHelpText>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Proposed Products</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>Grouper</relationshipLabel>
        <relationshipName>PPGrouper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grouper</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Grouper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grouper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>BD_Product</fullName>
        <active>true</active>
        <description>Benefit Design Product Record Type</description>
        <label>BD Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposed_Proposed</fullName>
        <active>true</active>
        <label>Proposed Product</label>
    </recordTypes>
    <validationRules>
        <fullName>EBRF001</fullName>
        <active>false</active>
        <description>If a user tries to edit a BRF after it has been submitted for ARC approval.</description>
        <errorConditionFormula>NOT(ISBLANK(TEXT(Proposed_Products__r.Benefit_Request_Form__r.ARC_Approval_Status__c)))</errorConditionFormula>
        <errorMessage>EBRF001: The Grouper cannot be modified after BRF has been submitted for ARC Approval.</errorMessage>
    </validationRules>
</CustomObject>